@@ -1,3 +1,11 @@
+2009-11-25  Kevin Ryde  <user42@zip.com.au>
+
+	* man.el (Man-completion-table): default-directory "/" in case
+	doesn't otherwise exist.  process-environment COLUMNS=999 so as
+	not to truncate long names.  process-connection-type pipe to avoid
+	any chance of hitting the pseudo-tty TIOCGWINSZ.  (Further to
+	Bug#3717.)
+
 2009-11-25  Juri Linkov  <juri@jurta.org>
 
 	* man.el (Man-completion-table): Modify regexp to include
